 * un-qx-server.py: Fixed it to test cookies

2014-03-15  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * ref-server.py: Removed
 * twill-tests: Added all twill tests
 * images: Added 2 more images to test the project

2014-03-16  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * render.py: Removed
 * test_server.py: Updated to send arguments to main()
 * images.html: Fixed the href tag
 * images_thumb.html: Added new page with thumbnail images
 * Project 5: I created an /images_thumb page out of the thumbnails of the
       images from the /images page. It is listed in index.html and is tested
       like all the other pages. The html (images_thumb.html) loops through
       the images, displaying them (reduced to 50 X 50 pixels), 4 per row. Like
       images.html, they are in alphabetic order, and will appear on a new page
       in full size if the image is selected.

2014-03-21  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * chat: Added the app files
 * quotes: Added the app files
 * server.py: Added the code to run the chat and quotes apps

2014-03-23  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * imageapp/templates: Added the "Touching" css to imageapp
 * Project 3: I added the Touching CSS to imageapp

2014-03-25  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * imageapp/root.py: It now exports the CSS background images so they will
       appear on the web site
 * imageapp/html.py: It opens and reads the background images in the CSS and
       returns them to root.py

2014-03-29  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * imageapp/__init__.py: I changed it to load the dice.png file from the
       images folder where all the images are instead of the imageapp folder
 * Project 6: I added metadata uploading to the imageapp. The name and
       description of the image are stored in a dictionary with the image.

2014-03-30  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * imageapp/search.html: Added this to search image metadata
