@@ -1,0 +1,23 @@
+{% extends "base.html" %}
+
+{% block content %}
+
+<h2>Search Results:</h2>
+
+{% if results %}
+<table border=1 cellpadding=1 cellspacing=1>
+
+  {% for i in results %}
+  <tr>
+    <td>
+      <a href=update_latest?i={{ i['index'] }}>{{ i['name'] }}</a>
+    </td>
+    <td valign="top">{{ i['desc'] }}</td>
+  </tr>
+  {% endfor %}
+
+</table>
+{% else %} <p>No image found</p>
+{% endif %}
+
+{% endblock %}
